--- a/assets/dashboard/index.html
+++ b/assets/dashboard/index.html
@@ -6,5 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3QUILIBRIUM | Home</title>
   </head>
-  <body></body>
+  <body>
+    DASHBOARD
+  </body>
 </html>
