[add] chat notification reminders

--- a/assets/chat/index.html
+++ b/assets/chat/index.html
@@ -6,5 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3QUILIBRIUM | Chat</title>
   </head>
-  <body></body>
+  <body>
+    <script
+      type="text/javascript"
+      src="./scripts/loader.js"
+      async
+      defer
+    ></script>
+    <section
+      id="app-loader-3quilibrium"
+      class="app-loader-3quilibrium"
+      data-description="From sudden breaks to software bugs, we have all your devices covered."
+      data-logo="https://myhappynation.in/upload-simple/66671113415118148811.png"
+      data-color="#0084ff"
+      style="--color-theme: #0084ff"
+    ></section>
+  </body>
 </html>
