--- a/assets/dashboard/index.html
+++ b/assets/dashboard/index.html
@@ -7,6 +7,19 @@
     <title>3QUILIBRIUM | Home</title>
   </head>
   <body>
-    DASHBOARD
+    <script
+      type="text/javascript"
+      src="./scripts/loader.js"
+      async
+      defer
+    ></script>
+    <section
+      id="app-loader-3quilibrium"
+      class="app-loader-3quilibrium"
+      data-description="From sudden breaks to software bugs, we have all your devices covered."
+      data-logo="https://myhappynation.in/upload-simple/66671113415118148811.png"
+      data-color="#0084ff"
+      style="--color-theme: #0084ff"
+    ></section>
   </body>
 </html>
